1992-01-16  dickey@software.org

	* src/version.h:
	corrected an error in 'dedmake()' which broke replay-logic.
	make 'ded' able to treat argument which is a single file.

	* src/dedmake.c:
	corrected a "little" bug which caused this to screw up the
	state of the replay-logic in 'dedline()' if a user-error
	was found.

1992-01-02  dickey@software.org

	* src/dedscan.c: make this handle "?" and "*" in initial argument

	* src/dedscan.c:
	if only a pathname is given in the initial arguments, then
	initialize the 'toscan' pattern to match the filename.

1991-12-05  dickey@software.org

	* src/Makefile: corrected use of 'copy'

1991-12-05  ste_cm@software.org

	* src/Makefile: BASELINE Thu Dec  5 15:14:27 1991

1991-11-21  dickey@software.org

	* src/ded.c: make 'tag_opt' public

1991-11-21  ste_cm@software.org

	* src/ded.c: BASELINE Thu Nov 21 07:36:21 1991

1991-11-21  dickey@software.org

	* src/dedring.c: save/unsave tag_opt

1991-11-21  ste_cm@software.org

	* src/dedring.c: BASELINE Thu Nov 21 07:36:21 1991

1991-11-21  dickey@software.org

	* src/ded.h: make tag_opt public

1991-11-21  ste_cm@software.org

	* src/ded.h: BASELINE Thu Nov 21 07:36:21 1991

1991-11-12  dickey@software.org

	* src/dedline.c:
	corrected 'edittext()'; was not properly clearing buffer if
	I got a kill-character.

1991-11-12  ste_cm@software.org

	* src/dedline.c: BASELINE Tue Nov 12 12:14:11 1991

1991-11-12  dickey@software.org

	* test/traceback.sh: RCS_BASE

1991-11-12  ste_cm@software.org

	* test/traceback.sh: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

	* test/traceback.sh:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1991-11-12  Thomas E. Dickey  <dickey@software.org>

	* test/walkback.sh: RCS_BASE

1991-10-22  dickey@software.org

	* test/run_test.sh:
	made this test for batch-mode (cannot run then, because we have no /dev/tty)

1991-10-22  ste_cm@software.org

	* test/run_test.sh: BASELINE Tue Oct 22 12:22:42 1991

1991-10-21  ste_cm@software.org
