@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920116
+MANIFEST for ded, version t19920204
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
