@@ -1,3 +1,13 @@
+1992-02-04  dickey@software.org
+
+	* src/ded2s.c:
+	when ztime/mtime differ by only a second, show + or -, ratehr
+	than > or <.
+
+	* src/Makefile, Makefile: *** empty log message ***
+
+	* Makefile, src/Makefile: consistent COPY, GET
+
 1992-01-16  dickey@software.org
 
 	* src/version.h:
